fixed overflow by lowering padding and adding box-sizing border-box, updated colors

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .container {
-    border-style: solid;
-    border-color:rebeccapurple;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -13,7 +12,7 @@
 }
 
 .container div {
-    padding: 15px;
+    padding: 8px;
     font-family: Arial;
     font-size: 18px;
 }
@@ -27,7 +26,7 @@ div .header-section {
 }
 
 div .greeting-section {
-    padding: 0px;
+    padding: 2px;
 }
 
 div .name {
@@ -45,20 +44,19 @@ div .header-main {
 }
 
 .header {
-    border-style: solid;
-    border-color: cornflowerblue;
     font-weight: bold;
     grid-column-start: 2;
     grid-row-start: 1;
-    background-color: blanchedalmond;
     height: 180px;
+    background: rgba(61, 91, 117, 1);   
 }
 
 .header-section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 80px;
+    height: 70px;
+    color: white;
 }
 
 .searchbar {
@@ -78,20 +76,26 @@ div .header-main {
     width: 300px;
     display: grid;
     grid-template-columns: repeat(3, minmax(100px, 200px));
+    padding: 0px;
+    margin: 8px;
 }
 
 .icon, .small-avatar {
     justify-self: end;
+    color: white;
+    margin-right: 8px;
 }
 
 .name {
     grid-column-start: 3;
+    color: white;
 }
 
 .greeting-section {
     display: flex;
     justify-content: space-between;
     height: 100px;
+    color: white;
 }
 
 .avatar {
@@ -107,10 +111,10 @@ div .header-main {
 }
 
 .sidebar-menu {
-    border-style: solid;
-    border-color: rgb(206, 98, 26);
-    background-color: dodgerblue;
-    grid-row: 1/ 3;
+    background-color: #312e35;
+    grid-row: 1 / 3;
+    background: rgb(1,1,1);
+    background: linear-gradient(131deg, rgba(1,1,1,1) 0%, rgba(61,91,117,1) 50%);
 }
 
 .dashboard {
@@ -120,20 +124,21 @@ div .header-main {
     grid-template-rows: 60px 1fr;
     gap: 10px;
     min-width: 225px;
+    color: white;
 }
 
 .dashboard i {
     justify-self: center;
-    margin-top: 25%;
+    font-size: 25px;
+    color:rgba(127, 190, 245, 1);
 }
 
 .dashboard h2 {
     font-size: 26px;
+    color: rgba(127, 190, 245, 1);
 }
 
 .menu-items {
-    border-style: solid;
-    border-color: rgb(238, 255, 233);
     grid-row: 2;
     width: 180px;
     display: grid;
@@ -142,19 +147,13 @@ div .header-main {
     gap: 10px;
 }
 
-.menu-items i {
-    justify-self: normal;
-}
-
 .main {
-    border-style: solid;
-    border-color: rgb(116, 12, 52);
     background-color: gainsboro;
     grid-row: 2;
     grid-column: 2;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    height: 40rem;
+    height: 100vh;
 }
 
 .card-section {
@@ -170,14 +169,13 @@ div .header-main {
     border-radius: 6px;
     border-left-width: 6px;
     border-left-style: solid;
-    border-left-color: rgb(237, 205, 100);
+    border-left-color: rgba(127, 190, 245, 1);
 }
 
 .right-section {
     padding: 8px;
     display: grid;
-    gap: 15px;
-    grid-template-rows: repeat(autofit, minmax(150px, 1fr));
+    grid-template-rows: repeat(autofit, minmax(100px, 1fr));
 }
 
 .announcements {
